sumo/tests/sumo/output/vtypeprobe/errors/freq_empty/errors.sumo
Error: Attribute 'freq' in definition of vtypeprobe 'test1' is empty.
Quitting (on error).
